syntax = "proto3";

// Sent when a shared process becomes active
message SharedProcessActiveMessage {
	string socket_path = 1;
}